--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 
     <!-- Header Image Section -->
     <section>
-      <div class="SOMETHING">
-      <header class="">   
+      <div class="banner">
+      <header class="banner-text">   
         <hgroup>
-          <h1>Introducting Swell</h1>
+          <h1>Introducing Swell</h1>
           <h4>The list that works for you.</h4>
         </hgroup>
       </header>
