add  modernizr style

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="icon" type="image/png" href="/favicon.ico" />
     <title>Swell | Free expert help and tips for your to-do list</title>
 
+    <!-- CSS Normalize -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css" >
+
     <!-- Fonts from Google Fonts -->
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,300,400italic,400,600italic,600,700italic,700,800italic,800" rel="stylesheet" type="text/css" />
     <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css' />
@@ -81,6 +84,9 @@
       <p class="muted credit">Copyright &copy; Swell 2015 | Made with <span style="color:red">&hearts;</span>
        by Elizabeth Lovero</p>
     </footer>
+
+    <!-- Modernizr -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 
     <!-- JQuery -->
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
