finish responsive media and clearfix

--- a/index.html
+++ b/index.html
@@ -1,105 +1,53 @@
-<!DOCTYPE html> 
-<html lang="en">
+<!doctype html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <link rel="icon" type="image/png" href="favicon.ico" />
+        <title>Swell | Free expert help and tips for your to-do list</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <head>
-    <meta charset="utf-8" />
-    <meta name="description" content="Swell is a free to-do list app that provides personalized assistance with any task. Enter your to-dos and our team of experts will find recommendations tailored to you." />
-    <meta name="keywords" content="Help, Swell, Expert, Concierge, Advice, Babysitter, Work, Recommendation, Assistant, Research, Helpful, Planner, Gift, Task, Todo" />
-    <meta name="apple-itunes-app" content="app-id=921770935" />
-    <link rel="icon" type="image/png" href="/favicon.ico" />
-    <title>Swell | Free expert help and tips for your to-do list</title>
+        <!-- Fonts from Google Fonts -->
+        <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,300,400italic,400,600italic,600,700italic,700,800italic,800" rel="stylesheet" type="text/css" />
+        <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css' />
 
-    <!-- Fonts from Google Fonts -->
-    <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,300,400italic,400,600italic,600,700italic,700,800italic,800" rel="stylesheet" type="text/css" />
-    <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css' />
-    
-    <!-- Stylesheets -->
-    <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css">
-    <link rel="stylesheet" type="text/css" href="stylesheets/main.css" />
-    <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
-    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
-  </head>
+        <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="css/main.css">
+    </head>
+    <body>
 
-  <body>
-    <!-- Navbar -->
-    <header>
-      <nav>
-        <ul>
-            <li id="brand"><a href="#">swell</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-            <li><a href="#press">Press</a></li>
-        </ul>
-      </nav>
-    </header>
-
-    <!--Main Content --> 
-    <div id="wrapper">
-      <!-- Header Image Section -->
-      <section>
-        <div id="grad">
-        <header class="banner">   
-          <hgroup>
-            <h1>Introducing Swell</h1>
-            <h4>The list that works for you.</h4>
-          </hgroup>
-          <a href="#" class="button">Download App</a>
-        </header>
+        <div class="header-container">
+            <header class="wrapper clearfix">
+                <h1 class="title">swell</h1>
+                <nav>
+                    <ul>
+                        <li><a href="#">Press</a></li>
+                        <li><a href="#">Contact</a></li>
+                        <li><a href="#">About</a></li>
+                    </ul>
+                </nav>
+            </header>
         </div>
-      </section>
 
-      <!-- Example Task Carousel -->
-      <section class="example-task">
-        <header>
-          <hgroup>
-            <h3>Example Task:</h3>
-            <h3>Buy a housewarming gift</h3>
-          </hgroup>
-        </header>
-        <div class="carousel">
-          <div>
-              <img src="http://builds.tryswell.com/mock/img/chucka-1.jpg" alt="">
-              <figcaption>
-                <h3>Tip 1</h3>
-                <p>Lorem ipsum dolar sit amet, consectetur adipiscing elit.</p>
-              </figcaption>
-          </div>
-          <div>            
-            <img src="http://builds.tryswell.com/mock/img/chucka-2.jpg" alt="">
-            <h3>Tip 2</h3>
-            <p>Lorem ipsum dolar sit amet, consectetur adipiscing elit.</p>
-          </div>
-          <div>            
-            <img src="http://builds.tryswell.com/mock/img/chucka-3.jpg" alt="">
-            <h3>Tip 3</h3>
-            <p>Lorem ipsum dolar sit amet, consectetur adipiscing elit.</p>
-          </div>
-          <div>            
-            <img src="http://builds.tryswell.com/mock/img/boot-1.jpg" alt="">
-            <h3>Tip 4</h3>
-            <p>Lorem ipsum dolar sit amet, consectetur adipiscing elit.</p>
-          </div>       
-        </div> <!-- end Slider -->
+        <div class="main-container">
+                <div class="main wrapper clearfix">
+
+                    <article>
+                        <header>
+                            <h1>Introducing Swell</h1>
+                            <p>The list that works for you</p>
+                        </header>
+                        <button class="btn-default">Download App</button>
+                    </article>
+
+                </div> <!-- #main -->
+        </div> <!-- #main-container -->
+
+        <div class="carousel-container">
+            <header class="wrapper">
+                <h3>Example Task:</h3>
+                <h3>Buy a housewarming gift</h3>
+            </header>
+        </div>
       
-      </section>
-
-      <footer>
-        <p class="credit">Copyright &copy; Swell 2015 | Made with <span style="color:red">&hearts;</span>
-         by Elizabeth Lovero</p>
-      </footer>
-    </div> <!-- Wrapper -->
-
-    <!-- JQuery -->
-    <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script type="text/javascript" src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-
-    <!-- Slick JS -->
-    <script type="text/javascript" src="slick/slick.js"></script>
-
-    <!-- Swell JS -->
-    <script type="text/javascript" src="js/swell.js"></script>
-
-  </body>
+    </body>
 </html>
-
-
