carousel with hard-coded images

--- a/index.html
+++ b/index.html
@@ -6,10 +6,6 @@
 		<title>Swell | Free expert help and tips for your to-do list</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<!-- Fonts from Google Fonts -->
-		<link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,300,400italic,400,600italic,600,700italic,700,800italic,800" rel="stylesheet" type="text/css" />
-		<link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css' />
-
 		<!-- Stylesheets -->
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/main.css">
@@ -53,24 +49,24 @@
 		</header>
 		<div class="slider">
 			<div class="slide">
-			  <img src="img/sharkdog.jpg" alt="" class="item" />
+			  <img src="img/chucka-1.jpg" alt="shoe" class="item" height="200" width="200"/>
 			  <h3>Tip 1</h3>
 			  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 			</div>
 			<div class="slide">
-				<img src="img/sharkdog.jpg" alt="" class="item" />
-				<h3>Tip 2</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+			  <img src="img/chucka-1.jpg" alt="shoe" class="item" height="200" width="200"/>
+			  <h3>Tip 2</h3>
+			  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 			</div>
 			<div class="slide">
-				<img src="img/sharkdog.jpg" alt="" class="item" />
-				<h3>Tip 3</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+			  <img src="img/chucka-1.jpg" alt="shoe" class="item" height="200" width="200"/>
+			  <h3>Tip 3</h3>
+			  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 			</div>
 			<div class="slide">
-				<img src="img/sharkdog.jpg" alt="" class="item" />
-				<h3>Tip 4</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+			  <img src="img/chucka-1.jpg" alt="shoe" class="item" height="200" width="200"/>
+			  <h3>Tip 4</h3>
+			  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 			</div>
 		</div>      
 	</section>
