--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 		<!-- Stylesheets -->
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/main.css">
-		<link rel="stylesheet" type="text/css" href="slick/slick.css"/>
-		<link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
+		<link rel="stylesheet" href="css/owl.carousel.css"/>
+		<link rel="stylesheet" href="css/owl.theme.css"/>
 	</head>
 <body>
 
@@ -47,7 +47,9 @@
 			<h3>Example Task:</h3>
 			<h3>Buy a housewarming gift</h3>
 		</header>
-		<div class="slider">
+		<div id="owl-demo" class="owl-carousel">
+		</div>
+		<!-- <div class="slider">
 			<div class="slide">
 			  <img src="img/chucka-1.jpg" alt="shoe" class="item" height="200" width="200"/>
 			  <h3>Tip 1</h3>
@@ -68,7 +70,7 @@
 			  <h3>Tip 4</h3>
 			  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 			</div>
-		</div>      
+		</div>       -->
 	</section>
 
 	<!-- jQuery -->
@@ -79,7 +81,7 @@
 	<script src="js/script.js"></script>
 
 	<!-- slick JS -->
-	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.8/slick.min.js"></script>
+	<script src="js/owl.carousel.js"></script>
 
 </body>
 </html>
