responsive, needs refactoring on margins and captions for shoe images

--- a/index.html
+++ b/index.html
@@ -49,28 +49,10 @@
 		</header>
 		<div id="owl-demo" class="owl-carousel">
 		</div>
-		<!-- <div class="slider">
-			<div class="slide">
-			  <img src="img/chucka-1.jpg" alt="shoe" class="item" height="200" width="200"/>
-			  <h3>Tip 1</h3>
-			  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-			</div>
-			<div class="slide">
-			  <img src="img/chucka-1.jpg" alt="shoe" class="item" height="200" width="200"/>
-			  <h3>Tip 2</h3>
-			  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-			</div>
-			<div class="slide">
-			  <img src="img/chucka-1.jpg" alt="shoe" class="item" height="200" width="200"/>
-			  <h3>Tip 3</h3>
-			  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-			</div>
-			<div class="slide">
-			  <img src="img/chucka-1.jpg" alt="shoe" class="item" height="200" width="200"/>
-			  <h3>Tip 4</h3>
-			  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-			</div>
-		</div>       -->
+		<div class="customNavigation">
+			<a class="btn prev">&#8592;</a>
+			<a class="btn next">&#8594;</a>
+		</div>
 	</section>
 
 	<!-- jQuery -->
