--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
 			<h3>Example Task:</h3>
 			<h3>Buy a housewarming gift</h3>
 		</header>
-		<div id="owl-demo" class="owl-carousel">
-		</div>
 		<div class="customNavigation">
-			<a class="btn prev">&#8592;</a>
-			<a class="btn next">&#8594;</a>
+			<a class="glyphicons glyphicons-circle-arrow-left"></a>
+				<div id="owl-container" class="owl-carousel">
+				</div>
+			<a class="glyphicons glyphicons-circle-arrow-right"></a>
 		</div>
 	</section>
 
