--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
 			<h3>Buy a housewarming gift</h3>
 		</header>
 		<div class="customNavigation">
-			<a class="glyphicons glyphicons-circle-arrow-left"></a>
 				<div id="owl-container" class="owl-carousel">
+					<h3>Heading</h3>
+					<p>here</p>
 				</div>
-			<a class="glyphicons glyphicons-circle-arrow-right"></a>
 		</div>
 	</section>
 
