fix gradient left banner

--- a/index.html
+++ b/index.html
@@ -30,14 +30,16 @@
 
 	<!-- Banner -->
 	<section class="main-container">
-		<div class="main wrapper clearfix">
-			<article>
-				<header>
-				  <h1>Introducing Swell</h1>
-				  <p>The list that works for you</p>
-				</header>
-				<button class="btn-default">Download App</button>
-			</article>
+		<div id="demigrad">
+			<div class="main wrapper clearfix">
+				<article>
+					<header>
+					  <h1>Introducing Swell</h1>
+					  <p>The list that works for you</p>
+					</header>
+					<button class="btn-default">Download App</button>
+				</article>
+			</div>
 		</div> 
 	</section> 
 
